# slfractals

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
notebooks/: experiments-1-mandel.ipynb  experiments-2-koch.ipynb  experiments-3-colors.ipynb  experiments-4-plot.ipynb  experiments.ipynb  explore.ipynb  fractall.py  presentation.ipynb  rise.css
notebooks/img/: picture_sources.txt
notebooks/style/: notebook.css
run/: fractal_app.py
scripts/: poetry
slfractals/: __init__.py  cli.py  colors.py  compute.py  io.py  koch.py  polynomials.py
src/: fractal_app.py
src/slfractals/: cli.py  io.py  polynomials.py
tests/: test_multiprocess.py
