[tool.poetry]
name = "slfractals"
version = "0.2.2"
description = "exploring fractals defined on the complex number plane"
authors = ["Andreas Roth"]
license = "MIT license"
repository = "https://github.com/scherbertlemon/slfractals"
keywords = ["fractal", "complex", "mandelbrot"]

packages = [
    {include = "slfractals", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.9.0"
numpy = "^1.26.2"
pandas = "^2.1.4"
jupyterlab = "^3.0.0"
rise = "^5.7.1"
bokeh = "^3.3.2"
matplotlib = "^3.5.1"
jupyter-contrib-nbextensions = "^0.5.1"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
mandelbrotset = "slfractals.cli:mandelbrot"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
